--- a/business-rules/R39566.md
+++ b/business-rules/R39566.md
@@ -34,7 +34,7 @@ erp.entity: Logistics.Wms.WarehouseReconciliationLines
 | **Message**          | The Warehouse Location in line {LineNo} is from a different Warehouse Zone. Please check the  |
 |                      | Warehouse Zone and try again.                                                                 |
 +----------------------+-----------------------------------------------------------------------------------------------+
-| **Version**          | Introduced:                                                                                   |
+| **Version**          | Introduced: 26.2                                                                              |
 +----------------------+-----------------------------------------------------------------------------------------------+
 | **Revocable**        | NO                                                                                            |
 +----------------------+-----------------------------------------------------------------------------------------------+
