--- a/business-rules/R39596.md
+++ b/business-rules/R39596.md
@@ -3,7 +3,7 @@ erp.type: business-rule
 erp.entity: Applications.Service.ServiceActivities
 ---
 
-# R39596 Checklist - Create Checklist Execution
+# R39596 ServiceActivities - Create Checklist Execution
 +-----------------------------+---------------------------------------------------------------------------------------+
 | **Code**                    | R39596                                                                                |
 +-----------------------------+---------------------------------------------------------------------------------------+
@@ -15,36 +15,35 @@ erp.entity: Applications.Service.ServiceActivities
 +-----------------------------+---------------------------------------------------------------------------------------+
 | **Layer**                   | Back-End                                                                              |
 +-----------------------------+---------------------------------------------------------------------------------------+
-| **Events**                  | FirmPlanning +                                                                        |
+| **Events**                  | STATECHANGED                                                                          |
 +-----------------------------+---------------------------------------------------------------------------------------+
 | **Priority**                | Normal                                                                                |
 +-----------------------------+---------------------------------------------------------------------------------------+
 | **Modify**                  | NO                                                                                    |
 +-----------------------------+---------------------------------------------------------------------------------------+
-| **Action**                  | If (State == FirmPlanned)<br></br>                                                    |
-|                             | For all existing line records search Service and check where:<br>                     |
-|                             | (Service.OperationalProcedure != null )<br>                                           |
+| **Action**                  | On STATECHANGED to FirmPlanned<br></br>                                               |
+|                             | For all existing Service Activity Services records search Service and check where:<br>|
+|                             | (Service.OperationalProcedure is not null )<br>                                       |
 |                             | For each found Operational Procedure check if there is OperationalProcedureExecution; |
 |                             | if missing, create it.<br>                                                            |
 |                             | For each checklist template assigned to the operational procedure, create the<br>     |
 |                             | corresponding Checklist Execution Items by copying all Checklist Template Items<br>   |
 |                             | into the execution (one execution item per template item).<br></br>                   |
-|                             | The rule must be idempotent (must not create duplicates when triggered more than once)|
+|                             | The rule must be idempotent. Do not create a second Operational Procedure Execution<br>|
+|                             | for the same (Service Activity, Operational Procedure).                               |
 +-----------------------------+---------------------------------------------------------------------------------------+
-| **Description**             | This rule automatically initializes operational work execution and checklists when a  |
-|                             | Service Activity becomes Firm Planned.                                                |
-|                             | For all services included in the activity that have a defined Operational Procedure,  |
-|                             | the system creates the required Operational Procedure Executions and populates the    |
-|                             | related Checklist Execution Items from the procedure’s checklist templates. This      |
-|                             | ensures that technicians receive a ready-to-use checklist at the planning stage and   |
-|                             | eliminates manual checklist setup. Services without an operational procedure are      |
-|                             | ignored.                                                                              |
+| **Description**             | Creates operational procedure executions and initializes checklist execution items    |
+|                             | when a Service Activity is moved to Firm Planned. For each service line whose         |
+|                             | service has an Operational Procedure, the rule ensures an Operational Procedure       |
+|                             | Execution exists and generates the related Checklist Execution Items from the         |
+|                             | procedure’s checklist template items. The rule is idempotent and skips services       |
+|                             | without an operational procedure.                                                     |
 +-----------------------------+---------------------------------------------------------------------------------------+
 | **Message**                 | \-                                                                                    |
 +-----------------------------+---------------------------------------------------------------------------------------+
 | **Version**                 | Introduced:                                                                           |
 +-----------------------------+---------------------------------------------------------------------------------------+
-| **Revocable**               | YES                                                                                   |
+| **Revocable**               | NO                                                                                    |
 +-----------------------------+---------------------------------------------------------------------------------------+
 
 *\* For more information about the Business Rules Documentation Template and a short explanation of each column, see
