--- a/business-rules/R39596.md
+++ b/business-rules/R39596.md
@@ -3,7 +3,7 @@ erp.type: business-rule
 erp.entity: Applications.Service.ServiceActivities
 ---
 
-# R39596 ServiceActivities - Create Checklist Execution
+# R39596 ServiceActivity - Create Checklist Execution
 +-----------------------------+---------------------------------------------------------------------------------------+
 | **Code**                    | R39596                                                                                |
 +-----------------------------+---------------------------------------------------------------------------------------+
