--- a/business-rules/R39606.md
+++ b/business-rules/R39606.md
@@ -11,7 +11,7 @@ erp.entity: Regulatory.Intrastat.Declarations
 +-----------------------------+---------------------------------------------------------------------------------------+
 | **Name**                    | DeclarationAndEnterpriseCompanySameBaseCurrency                                       |
 +-----------------------------+---------------------------------------------------------------------------------------+
-| **Attribute**               | BaseCurrency                                                                     |
+| **Attribute**               | BaseCurrency                                                                          |
 +-----------------------------+---------------------------------------------------------------------------------------+
 | **Layer**                   | Back-End                                                                              |
 +-----------------------------+---------------------------------------------------------------------------------------+
@@ -30,10 +30,10 @@ erp.entity: Regulatory.Intrastat.Declarations
 | **Description**             | Validate that the Intrastat declaration Base Currency matches the selected            |
 |                             | Enterprise Company Base Currency.                                                     |
 +-----------------------------+---------------------------------------------------------------------------------------+
-| **Message**                 | Cannot save product with code \'{PartNumber}\', because it has invalid entry for      |
-|                             | Enterprise Company.                                                                   |
-|                             | When an enterprise company is specified for a product group, the products within this |
-|                             | group should have the same enterprise company.                                        |
+| **Message**                 | The base currency in the Intrastat declaration {BaseCurrency} does not match the base |
+|                             | currency of the selected enterprise company {EnterpriseCompany.BaseCurrency}.         |
+|                             |                                                                                       |
+|                             | Please ensure the base currencies match and try again.                                |
 +-----------------------------+---------------------------------------------------------------------------------------+
 | **Version**                 | Introduced:                                                                           |
 +-----------------------------+---------------------------------------------------------------------------------------+
