--- a/business-rules/R32946.md
+++ b/business-rules/R32946.md
@@ -5,7 +5,7 @@ erp.entity: Communities.Social.Comments
 
 # R32946 SocialComment - Create Mentioned User Follow
 
-| Name | Value |Tagged
+| Name | Value |
 | ---- | ----- |
 | Code | R32946 |
 | Entity | @Communities.Social.Comments |
@@ -18,6 +18,7 @@ erp.entity: Communities.Social.Comments
 | Applicable Legislations | [ALL // no condition needed](xref:applicable-legislations) |
 | Action | If Comment_Text contains "{Public_Users(" , <br> then create a new Follow as follows: <br><br> - Follow.User = the User from the mention in the comment text {Public_Users(UserId).FullName} <br> - Follow.CreationTimeUtc =  NOW <br> - Follow.DataObject = SocialComments.DataObject  <br> - Follow.FollowLevel = Tagged|
 | Description| When a user is mentioned in a comment, the rule creates a follow for the mentioned user. In this way, the mentioned user will automatically follow the whole conversation and the object becomes his Favourite.|  
+| Follow level| Tagged |
 | Message | - |
 | Version | Introduced: 22|
 | Revocable | NO |
