--- a/business-rules/R33430.md
+++ b/business-rules/R33430.md
@@ -16,7 +16,7 @@ erp.entity: Communities.Social.Comments
 | Priority | Normal |
 | Modify | YES |
 | Applicable Legislations | [ALL // no condition needed](xref:applicable-legislations) |
-| Action | If Social.Comment == NewComment, <br> then create a new Follow as follows: <br><br> - Follow.User = Social.Comment.User <br> - Follow.CreationTimeUtc =  NOW <br> - Follow.DataObject = Social.Comments.DataObject <br> Follow.FollowLevel = Tagged |
+| Action | If Social.Comment == NewComment, <br> then create a new Follow as follows: <br><br> - Follow.User = Social.Comment.User <br> - Follow.CreationTimeUtc =  NOW <br> - Follow.DataObject = Social.Comments.DataObject <br> - Follow.FollowLevel = Tagged |
 | Description| When a user comments on an object, the rule creates a follow for this user. In this way, the user will automatically follow the whole conversation.|  
 | Message | - |
 | Follow level| creates follow level Tagged |
