--- a/business-rules/R33691.md
+++ b/business-rules/R33691.md
@@ -25,7 +25,8 @@ erp.entity: Applications.Service.ServiceAgreements
 |                             | IF the old value in ServiceAgreementServices.Quantity != 0 <br/>                      |
 |                             | AND <br/>                                                                             |
 |                             | the old value in ServiceAgreementServices.Quantity == ServiceActivity.DistributedServiceAgreementServices.AgreedQuantity<br/>
-|                             | AND  ServiceAgreementServices.oldQuantity != ServiceAgreementServices.newQuantity <br/>
+|                             | AND <br/>                                                                             |
+|                             | ServiceAgreementServices.oldQuantity != ServiceAgreementServices.newQuantity <br/>    |
 |                             |                                                                                       |
 |                             | THEN throw an error                                                                   |
 +-----------------------------+---------------------------------------------------------------------------------------+
