--- a/business-rules/R38890.md
+++ b/business-rules/R38890.md
@@ -3,7 +3,7 @@ erp.type: business-rule
 erp.entity: Systems.Core.ObjectFiles
 ---
 
-# R38890 ObjectFiles - System Comment On File Uploaded
+# R38890 ObjectFile - System Comment On File Uploaded
 
 | Name | Value |
 | ---- | ----- |
