--- a/business-rules/R39605.md
+++ b/business-rules/R39605.md
@@ -17,7 +17,7 @@ erp.entity: Crm.Sales.Customers
 | Action | Once specified, the Party reference cannot be changed.  |
 | Description | The rule prevents accidental reassignment of a Customer record to a different Party and ensures consistency of the related settings, documents, reports, and integrations. |
 | Message | Field "Party" cannot be changed.|
-| Version | Introduced: |
+| Version | Introduced: v.26.2 |
 | Revocable | NO |
 
 *\* For more information about the Business Rules Documentation Template and a short explanation of each column, see
